[project]
name = "raindrop-collection-summarizer"
version = "0.1.0"
description = "Raindrop.io コレクションの記事を取得・要約し HTML 一覧として出力するバッチツール"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "trafilatura>=1.8",
    "readability-lxml>=0.8",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
